2023-11-14T01:18:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6857907827 # 955
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-14
* notice: last 14d: unq all: 2 27
* notice: prev accum: outdated-unq outdated-all / unq all: 286 607 / 300 638
* notice: next accum: outdated-unq outdated-all / unq all: 287 610 / 300 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2023-10-30] / [2023-10-31]

2023-11-13T01:19:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6844464286 # 952
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-13
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 285 604 / 300 638
* notice: next accum: outdated-unq outdated-all / unq all: 286 607 / 300 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
* notice: removed / changed dates: [2023-10-29] / [2023-10-30]

2023-11-12T01:22:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6837748162 # 949
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-12
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 284 602 / 300 638
* notice: next accum: outdated-unq outdated-all / unq all: 285 604 / 300 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
* notice: removed / changed dates: [2023-10-28] / [2023-10-29]

2023-11-11T16:21:02Z: