@@ -1,66 +1,16 @@
 {
-  "count": 27,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-10-31T00:00:00Z",
+      "timestamp": "2023-12-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2023-11-01T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-02T00:00:00Z",
-      "count": 3,
+      "timestamp": "2023-12-27T00:00:00Z",
+      "count": 4,
       "uniques": 2
-    },
-    {
-      "timestamp": "2023-11-03T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-05T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-06T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-07T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-08T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-10T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2023-11-11T00:00:00Z",
-      "count": 2,
-      "uniques": 1
     }
   ]
 }
