@@ -1,3 +1,12 @@
+2024-01-07T08:08:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7436979810 # 1
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 287 610 / 300 638
+* notice: next accum: outdated-unq outdated-all / unq all: 300 638 / 303 643
+* notice: prev exec diff / last date diff / accum: unq all: +3 +5 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [2023-10-31 2023-11-01 2023-11-02 2023-11-03 2023-11-04 2023-11-05 2023-11-06 2023-11-07 2023-11-08 2023-11-09 2023-11-10 2023-11-11] / [2023-12-25 2023-12-27]
+
 2023-11-14T01:18:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6857907827 # 955
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-14
